<resources>
    <string name="app_name">PG Monitor</string>
    <string name="action_settings">Settings</string>

    <string name="ondotori">ONDOTORI</string>
    <string name="ondotori_temp">Temperature</string>
    <string name="ondotori_humid">Humidity</string>
    <string name="ondotori_co2">CO2</string>
    <string name="ondotori_avg">AVG</string>
    <string name="ondotori_min">MIN</string>
    <string name="ondotori_max">MAX</string>
    <string name="ondotori_last">LAST</string>
    <string name="ondotori_temp_unit">\u00b0C</string>
    <string name="ondotori_humid_unit">%</string>
    <string name="ondotori_co2_unit">ppm</string>
    <string name="ondotori_temp_min_val">---</string>
    <string name="ondotori_temp_max_val">---</string>
    <string name="ondotori_temp_avg_val">---</string>
    <string name="ondotori_temp_last_val">90</string>
    <string name="ondotori_humid_min_val">---</string>
    <string name="ondotori_humid_max_val">---</string>
    <string name="ondotori_humid_avg_val">---</string>
    <string name="ondotori_humid_last_val">12</string>
    <string name="ondotori_co2_min_val">---</string>
    <string name="ondotori_co2_max_val">---</string>
    <string name="ondotori_co2_avg_val">---</string>
    <string name="ondotori_co2_last_val">11</string>
    <string name="ondotori_interval">1 Hour</string>
    <string name="motion">Motion</string>


    <string name="dummy_section_text">Section %1d is just a dummy section.</string>

</resources>
