<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ondotori_frag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="0,4"
    android:background="@drawable/shape"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="10sp"
    android:layout_marginTop="10sp"
    android:layout_marginBottom="10sp"
    android:padding="10sp">
    <View android:layout_width="match_parent"
        android:layout_height="5dp" />
    <TableRow>
        <TextView
            android:text="Sensor Type"
            style="@style/table_header"
            android:padding="5dp"
            android:layout_weight="4"/>
        <TextView
            android:text="@string/ondotori_avg"
            style="@style/table_sub_header"
            android:textAlignment="center"
            android:padding="5dp"
            android:layout_weight="2"/>
        <TextView
            android:text="@string/ondotori_min"
            style="@style/table_sub_header"
            android:textAlignment="center"
            android:padding="5dp"
            android:layout_weight="2"/>
        <TextView
            android:text="@string/ondotori_max"
            style="@style/table_sub_header"
            android:textAlignment="center"
            android:padding="5dp"
            android:layout_weight="2"/>
        <View android:layout_weight="2" android:layout_height="match_parent"/>
        <TextView
            android:text="@string/ondotori_last"
            style="@style/table_sub_header"
            android:textAlignment="center"
            android:paddingRight="5dp"
            android:layout_weight="4"/>
        <TextView/>
        <View android:layout_weight="2" android:layout_height="match_parent"/>
    </TableRow>
    <View android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/dark_blue"/>
    <TableRow>
        <TextView
            android:text="@string/ondotori_temp"
            style="@style/table_sub_header"
            android:textSize="14sp"
            android:layout_weight="4"/>
        <TextView
            android:text="@string/ondotori_temp_avg_val"
            android:textAlignment="center"
            android:layout_weight="2"/>
        <TextView
            android:text="@string/ondotori_temp_min_val"
            android:textAlignment="center"
            android:layout_weight="2"/>
        <TextView
            android:text="@string/ondotori_temp_max_val"
            android:textAlignment="center"
            android:layout_weight="2"/>
        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:src="@drawable/temp_icon" />
        <TextView
            android:text="@string/ondotori_temp_last_val"
            style="@style/Emphasized"
            android:layout_weight="4"/>
        <TextView
            android:text="@string/ondotori_temp_unit"
            android:textAlignment="center"
            android:layout_weight="2"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/ondotori_humid"
            style="@style/table_sub_header"
            android:textSize="14sp"
            android:layout_weight="4"/>
        <TextView
            android:text="@string/ondotori_humid_avg_val"
            android:textAlignment="center"/>
        <TextView
            android:text="@string/ondotori_humid_min_val"
            android:textAlignment="center"/>
        <TextView
            android:text="@string/ondotori_humid_max_val"
            android:textAlignment="center"/>
        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:src="@drawable/humid_icon" />
        <TextView
            android:text="@string/ondotori_humid_last_val"
            style="@style/Emphasized"/>
        <TextView
            android:text="@string/ondotori_humid_unit"
            android:textAlignment="center"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/ondotori_co2"
            style="@style/table_sub_header"
            android:textSize="14sp"/>
        <TextView
            android:text="@string/ondotori_co2_avg_val"
            android:textAlignment="center"/>
        <TextView
            android:text="@string/ondotori_co2_min_val"
            android:textAlignment="center"/>
        <TextView
            android:text="@string/ondotori_co2_max_val"
            android:textAlignment="center"/>
        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:src="@drawable/co2_icon" />
        <TextView
            android:text="@string/ondotori_co2_last_val"
            style="@style/Emphasized" />
        <TextView
            android:text="@string/ondotori_co2_unit"
            android:textAlignment="center"/>
    </TableRow>
</TableLayout>