<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:gravity="center_horizontal"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/soft_blue">
        <LinearLayout
            android:id="@+id/temp_option_layout"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@color/soft_orange"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/temp_icon"
                android:id="@+id/temp_button" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ondotori_temp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/humid_option_layout"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/humid_icon"
                android:id="@+id/humid_button"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ondotori_humid" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/co2_option_layout"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/co2_icon"
                android:id="@+id/co2_button"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ondotori_co2" />
         </LinearLayout>
        <LinearLayout
            android:id="@+id/motion_option_layout"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/motion_icon"
                android:id="@+id/motion_button"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/motion"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <fragment
            android:name="com.pg_monitor.client.sensoraggrsys.OndotoriFragment"
            android:id="@+id/summarize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout="@layout/ondotori_frag" />
    </LinearLayout>
</LinearLayout>